UP-4861: Error Prone warning remediation